fixed loss scenario

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </div>
             <!-- Houses the attack and game over text -->
             <div class="row">
-            <div class="col-sm-12 col-md-3 col-lg-3"></div>
-                <div class="col-sm-12 col-md-6 col-lg-6 text-center">
+            <div class="col-sm-12 col-md-2 col-lg-2"></div>
+                <div class="col-sm-12 col-md-8 col-lg-8 text-center">
                                             <!-- This the area where the text gets updated as you play the game -->
                         <div id="attackText"> </div>
                         <!-- using this tag to create a button and use it to reset -->
@@ -123,7 +123,7 @@
                       <!-- <button> </button>   -->    
                         </div>
                 </div>
-                 <div class="col-sm-12 col-md-3 col-lg-3"></div>
+                 <div class="col-sm-12 col-md-2 col-lg-2"></div>
             </div>
     </div>
 
@@ -173,7 +173,7 @@
         <!-- Created a background with scrolling images -->
         <script type="text/javascript">
         $(document).ready(function() {
-            $.backstretch(['assets/images/bg-ship4.jpg', 'assets/images/bg-darth1.png','assets/images/darth2.jpg'], {
+            $.backstretch(['assets/images/bg-ship4.jpg', 'assets/images/darth4.jpg','assets/images/plane1.jpg', 'assets/images/plane2.jpg', 'assets/images/bg-kylo.jpg'], {
                 duration: 10000,
                 fade: 900
             });
