--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 			<%= gameObj.currentEnemy.name %>  has defeated you! Game Over!!
 		</div>
     </script>
+    <script type="text/template" id="jediTmpl">
+        <div class="attackText">
+            You have defeated <%= lastOpponent.name %>!  You are now a true Jedi Master! 
+            <br>
+            May the FORCE be with YOU! 
+        </div>
+    </script>
 
 
 
